--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Ma"
+    "countries.append('Malta')"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append"
    ]
   },
   {
