--- a/index.ipynb
+++ b/index.ipynb
@@ -430,16 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(countries)"
+    "unique_countries = set(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -447,22 +447,19 @@
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'USA',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
+       "{'Argentina',\n",
        " 'Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Italy',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
+       " 'Morocco',\n",
        " 'South Korea',\n",
-       " 'Malta']"
+       " 'USA'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
