--- a/index.ipynb
+++ b/index.ipynb
@@ -482,8 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - ()\n",
-    "num_of_repeats # 3"
+    "num_of_repeats = len(countries) - (len)num_of_repeats # 3"
    ]
   },
   {
